# Exercise-1

./: CMakeLists.txt
HelloAstu/: CMakeLists.txt  main.cpp
HelloWorld/: CMakeLists.txt  main.cpp
Uebung1/: CMakeLists.txt  main.cpp  main_black.cpp  main_blue.cpp  main_red.cpp
Uebung2/: CMakeLists.txt  MainBlue.cpp  MainRed.cpp
